Fix svg-wave aligned center to footer container

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -9,8 +9,8 @@
 .Wave {
   position: absolute;
   left: 0;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  top: 0%;
+  transform: translate(-50%, 50%);
   z-index: -1;
 }
 
